src/test/ui/static/static-vec-repeat-not-constant.stderr
error[E0015]: calls in statics are limited to constant functions, tuple structs and tuple variants
  --> $DIR/static-vec-repeat-not-constant.rs:3:25
   |
LL | static a: [isize; 2] = [foo(); 2];
   |                         ^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
